--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.stephanieodoom.com" />
-    <meta property="og:image" content="%PUBLIC_URL%/ProfessionalPhoto.jpeg" />
+    <meta property="og:image" content="%PUBLIC_URL%/Me.jpeg" />
     <meta property="og:site_name" content="Stephanie's Website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
