--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="My personal website"
     />
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:type" content="website" />
