Added some meta tags for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Stephanie Odoom" />
     <meta
       name="description"
-      content="My personal website"
+      content="Stephanie Odoom's portfolio website"
     />
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.stephanieodoom.com" />
+    <meta property="og:url" content="https://stephanieodoom.com" />
     <meta property="og:image" content="%PUBLIC_URL%/Me.jpeg" />
     <meta property="og:site_name" content="Stephanie's Website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
